fix: overflow-x hidden for landing page

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,6 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .landing_box {
